# license-system

./: COPYRIGHT  Cargo.toml  LICENSE  readme.md  readme.zh.md  rustfmt.toml
.cargo/: config.toml
examples/: aes256gcm.rs  chacha20.rs
src/: lib.rs  manager.rs  ty.rs
src/protocols/: aes256gcm.rs  chacha20.rs  mod.rs
